--- a/PhotosProcessor/Info.plist
+++ b/PhotosProcessor/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need access to your location in order to provide GPS repair services.</string>
 	<key>NSAppleEventsUsageDescription</key>
 	<string>This app requires access to Finder in order to manage files and perform file operations on your behalf.</string>
 </dict>
